unpackaged/main/default/objects/Ordered_Part_Event__c/Ordered_Part_Event__c.object-meta.xml
<CustomObject>
    <label>Ordered Part Event</label>
    <nameField>
        <label>Ordered Part Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordered Part Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>