unpackaged/main/default/objects/Ordered_Part_Event__c/fields/Job_Event__c.field-meta.xml
<CustomField>
    <fullName>Job_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Event</label>
    <referenceTo>Job_Event__c</referenceTo>
    <relationshipLabel>Ordered Part Events</relationshipLabel>
    <relationshipName>Ordered_Part_Events</relationshipName>
    <type>Lookup</type>
</CustomField>