unpackaged/main/default/objects/Ordered_Part_Event__c/fields/Ordered_Part__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Part__c</fullName>
    <label>Ordered Part</label>
    <referenceTo>Ordered_Part__c</referenceTo>
    <relationshipLabel>Ordered Part Events</relationshipLabel>
    <relationshipName>Ordered_Part_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>