unpackaged/main/default/objects/Ordered_Part_Event__c/fields/Xometry_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_Job_ID__c</fullName>
    <label>Xometry Job ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>