unpackaged/main/default/objects/Ordered_Part_Event__c/fields/Xometry_Part_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_Part_ID__c</fullName>
    <label>Xometry Part ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>