unpackaged/main/default/objects/Ordered_Part_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>